--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     <p id="errorMessage"></p>
         
     </header>
-        <script src="TAREA_DISEÑO.js"></script>
+        <script src="tarea_diseño.js"></script>
 </body>
 </html>
