--- a/INVITACION/index.html
+++ b/INVITACION/index.html
@@ -75,7 +75,7 @@
   </main>
 
   <!-- Audio (oculto) -->
-  <audio id="bgAudio" src="MUSICA/Un Pacto Con Dios.mp3" preload="none"></audio>
+  <audio id="bgAudio" src="Un Pacto Con Dios.mp3" preload="none"></audio>
 
   <script src="InvitacionBoda.js"></script>
 </body>
