--- a/INVITACION-CLIENTE/index.html
+++ b/INVITACION-CLIENTE/index.html
@@ -69,10 +69,11 @@
       ></iframe>
     </div>
     <a id="openMap" class="link" href="https://www.google.com/maps/place/Quinta+Los+Campeones/@-25.2952701,-57.4389597,17z/data=!3m1!4b1!4m6!3m5!1s0x945db1f193468c85:0x1568536a2974d3c!8m2!3d-25.2952701!4d-57.4389597!16s%2Fg%2F11kbd6f1wy?entry=ttu&g_ep=EgoyMDI1MDkyNC4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener">Abrir en Google Maps</a>
-    <audio id="bgAudio" src="MUSICA/Hasta mi final.mp3" preload="none"></audio>
+    <audio id="bgAudio" src="Hasta mi final.mp3" preload="none"></audio>
 
   <script src="InvitacionBoda.js"></script>
   </div>
 </section>
+
 
 
