--- a/INVITACION-CLIENTE/index.html
+++ b/INVITACION-CLIENTE/index.html
@@ -21,7 +21,7 @@
       </div>
 
       <figure class="cover">
-        <img src="IMAGENES/fotocliente.jpg" alt="Imagen pareja" />
+        <img src="IMAGENES/fotocliente.png" alt="Imagen pareja" />
       </figure>
     </header>
 
@@ -74,6 +74,7 @@
   <script src="InvitacionBoda.js"></script>
   </div>
 </section>
+
 
 
 
